Bug 489775 - Wallpaper settings crash on open
Summary: Wallpaper settings crash on open
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: generic-crash (other bugs)
Version First Reported In: 6.1.1
Platform: Fedora RPMs Linux
: NOR crash
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2024-07-05 09:01 UTC by romigor96
Modified: 2025-01-15 21:56 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.3.0
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (88.01 KB, text/plain)
2024-07-05 09:01 UTC, romigor96
Details

Note You need to log in before you can comment on or make changes to this bug.
Description romigor96 2024-07-05 09:01:25 UTC
Application: systemsettings (6.1.1)

Qt Version: 6.7.1
Frameworks Version: 6.3.0
Operating System: Linux 6.9.7-200.fc40.x86_64 x86_64
Windowing System: X11
Distribution: "Fedora Linux 40 (Forty)"
DrKonqi: 6.1.1 [CoredumpBackend]

-- Information about the crash:
Reproduces every time for me:
I use X11 KDE plasma 6.1 session
1) Click "Fedora" icon at the bottom left corner of task manager panel (to open applications and search panel)
2) Type "mouse" in search bar
3) Click "System settings Mouse" icon
4) Wait for Mouse - System settings window to appear
5) In the opened window click "< Mouse & Touchpad" button, to get back to main settings view
6) Scroll to "Appearence & Style - Wallpaper" menu and click on "Wallpaper" icon
7) "Error loading QML" appears and process crashes

The crash does not seem to be reproducible.

-- Backtrace (Reduced):
#5  0x00007f021c832b73 in QScreen::name (this=0x0) at /usr/src/debug/qt6-qtbase-6.7.1-2.fc40.x86_64/src/gui/kernel/qscreen.cpp:103
#6  0x00007f01f497b0f8 in operator() (__closure=0x7f01f8007010, outputOrder=...) at /usr/src/debug/plasma-workspace-6.1.1-1.fc40.x86_64/kcms/wallpaper/wallpapermodule.cpp:79
#9  QtPrivate::QCallableObject<WallpaperModule::WallpaperModule(QObject*, const KPluginMetaData&)::<lambda(const QStringList&)>, QtPrivate::List<const QList<QString>&>, void>::impl(int, QtPrivate::QSlotObjectBase *, QObject *, void **, bool *) (which=<optimized out>, this_=0x7f01f8007000, r=<optimized out>, a=<optimized out>, ret=<optimized out>) at /usr/include/qt6/QtCore/qobjectdefs_impl.h:555
#10 0x00007f021bffa752 in QtPrivate::QSlotObjectBase::call (this=0x7f01f8007000, r=<optimized out>, a=0x7ffdcc697630) at /usr/src/debug/qt6-qtbase-6.7.1-2.fc40.x86_64/src/corelib/kernel/qobjectdefs_impl.h:469
#11 doActivate<false> (sender=0x55a57bb17020, signal_index=3, argv=0x7ffdcc697630) at /usr/src/debug/qt6-qtbase-6.7.1-2.fc40.x86_64/src/corelib/kernel/qobject.cpp:4086


Reported using DrKonqi
Comment 1 romigor96 2024-07-05 09:01:26 UTC
Created attachment 171402 [details]
New crash information added by DrKonqi

DrKonqi auto-attaching complete backtrace.
Comment 2 romigor96 2024-07-05 09:03:43 UTC
I mistakenly clicked "The crash does not seem to be reproducible." but this is not true, I can reproduce it every time
Comment 3 TraceyC 2024-07-12 00:51:55 UTC
Not the same backtrace, but symptomatically related: https://bugs.kde.org/show_bug.cgi?id=487028
Comment 4 TraceyC 2024-07-12 00:58:40 UTC
Possible duplicate of https://bugs.kde.org/show_bug.cgi?id=487655
Comment 5 Bug Janitor Service 2025-01-13 14:59:18 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/5062
Comment 6 David Edmundson 2025-01-14 11:46:18 UTC
Git commit 6a8788962eee2218fe0c0319bf96a2b7130a97c5 by David Edmundson.
Committed on 14/01/2025 at 11:02.
Pushed by davidedmundson into branch 'master'.

kcms/wallpaper: Guard access to screen variable

The selected screen member variable is based on the user selecting a screen in the UI or on the window's current screen
either from the window changing or the screen being removed based on which happened last.

It is not guaranteed to always be valid.

M  +4    -0    kcms/wallpaper/wallpapermodule.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/6a8788962eee2218fe0c0319bf96a2b7130a97c5
Comment 7 Méven 2025-01-15 17:10:46 UTC
Git commit 5202cf7e3cdedf9655dc49f4114bbd675ea6c5cd by Méven Car, on behalf of David Edmundson.
Committed on 15/01/2025 at 16:42.
Pushed by meven into branch 'Plasma/6.3'.

kcms/wallpaper: Guard access to screen variable

The selected screen member variable is based on the user selecting a screen in the UI or on the window's current screen
either from the window changing or the screen being removed based on which happened last.

It is not guaranteed to always be valid.


(cherry picked from commit 6a8788962eee2218fe0c0319bf96a2b7130a97c5)

Co-authored-by: David Edmundson <kde@davidedmundson.co.uk>

M  +4    -0    kcms/wallpaper/wallpapermodule.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/5202cf7e3cdedf9655dc49f4114bbd675ea6c5cd